# rfhotel

./: .gitignore  Cargo.toml
federation/customers/: Cargo.toml
federation/customers/src/: main.rs
federation/gateway/: index.js  start.sh
federation/managers/: Cargo.toml
federation/managers/src/: main.rs
federation/rooms/: Cargo.toml
federation/rooms/src/: main.rs
models/customers/: Cargo.toml
models/customers/src/: lib.rs  model.rs
models/managers/: Cargo.toml
models/managers/src/: lib.rs  model.rs
models/rooms/: Cargo.toml
models/rooms/src/: lib.rs
